# car-acceleration-app

./: .gitignore  LICENSE  cars.csv  downforce_calculator.ipynb  game copy 2.py  game copy 3.py  game copy.py  game.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  sidebar.css  styles.css  torque_curve_generator.ipynb
assets/: cars.json
assets/engine_sounds/: shared.txt
assets/images/: nds.png~  stage_3.png-autosave.kra  tuned.kra
engine_sounds/: shared.txt
images/: 2013_Peugeot_208_GTI.png~  background.png~  road.png~  saxo_proj.kra
krita/cars/: 2013_Peugeot_208_GTI_proj1.kra
scripts/: cars.js  controls.js  event_listeners.js  generate_content.js  globals.js  init.js  main.js  plot2pdf.js  plots.js  router.js  rpm_meter.js  script.js  simulation.js  sound.js  util.js
scripts/engines/: physics.js  sound.js
scripts/ui/: plots.js  rpm_meter.js  views.js
styles/: dashboard.css  sidebar.css  styles.css
templates/: index.html  styles.css
tools/: downforce_calculator.ipynb  mat_viewer.ipynb  tire_model.ipynb  torque_curve_generator.ipynb
tools/data/: B1654run48.mat  B1654run51.mat  B1654run54.mat  B1654run57.mat  B1654run60.mat  B1654run63.mat
